--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,8 @@ jobs:
 #   steps:
 #     - script: swift test -c release -Xswiftc -enable-testing
 #       displayName: Linux Swift 5.0
-- job: macOS1013
+
+- job: macOS_10_13
   pool:
     vmImage: 'macOS 10.13'
   variables:
@@ -25,3 +26,20 @@ jobs:
         xcodebuild test -destination 'platform=macOS,arch=x86_64' -scheme "ZIPFoundation" |
         xcpretty -r junit -o build/reports/xcodebuild-macos.xml
       displayName: macOS Swfit 4.2
+
+- job: iOS_12_1
+  pool:
+    vmImage: 'macOS 10.13'
+  variables:
+    DEVELOPER_DIR: /Applications/Xcode_10.1.app
+  steps:
+    - script: >
+        set -o pipefail &&
+        xcodebuild test -sdk iphonesimulator -destination "name=iPhone 5" -scheme "ZIPFoundation" |
+        xcpretty -r junit -o build/reports/xcodebuild-iOS32.xml
+      displayName: iOS Swfit 4.2 (32-bit)
+    - script: >
+        set -o pipefail &&
+        xcodebuild test -sdk iphonesimulator -destination "name=iPhone X" -scheme "ZIPFoundation" |
+        xcpretty -r junit -o build/reports/xcodebuild-iOS64.xml
+      displayName: iOS Swfit 4.2 (64-bit)
