--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,3 +62,16 @@ jobs:
         xcodebuild build -sdk appletvsimulator -destination "name=Apple TV 4K" -scheme "ZIPFoundation" |
         xcpretty -r junit -o build/reports/xcodebuild-tvOS.xml
       displayName: tvOS Swfit 4.2
+
+- job: Analyze
+  pool:
+    vmImage: 'macOS 10.13'
+  variables:
+    DEVELOPER_DIR: /Applications/Xcode_10.1.app
+  steps:
+    - script: xcodebuild -scheme ZIPFoundation clean build-for-testing > xcodebuild.log
+      displayName: Generate xcodebuild.log
+    - script: HOMEBREW_NO_AUTO_UPDATE=1 brew install https://raw.github.com/Homebrew/homebrew-core/master/Formula/swiftlint.rb
+      displayName: Install SwiftLint
+    - script: swiftlint analyze --strict --compiler-log-path xcodebuild.log
+      displayName: SwiftLint Analyze
