Set SDK parameter [skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ jobs:
         exportOptionsPlist: ''
         configuration: 'Release'
         scheme: 'ZIPFoundation'
-        sdk: 'macOS'
+        sdk: 'macos'
         destinationPlatformOption: 'macOS'
         useXcpretty: true
         publishJUnitResults: true
