Fail task on failed tests [skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ jobs:
       inputs:
         testRunner: JUnit
         testResultsFiles: build/reports/**
+        failTaskOnFailedTests: true
 
 - job: iOS_12_1
   pool:
