--- a/.github/azure-pipelines.yml
+++ b/.github/azure-pipelines.yml
@@ -9,6 +9,14 @@ jobs:
   steps:
     - script: swift test -c release -Xswiftc -enable-testing
       displayName: Linux Swift 5.0
+     
+- job: Linux_Swift_4_0
+  pool:
+    vmImage: 'Ubuntu 16.04'
+  container: swift:4.0
+  steps:
+    - script: swift test -c release -Xswiftc -enable-testing
+    - displayName: Linux Swift 4.0
 
 - job: macOS_10_13
   pool:
