--- a/.github/azure-pipelines.yml
+++ b/.github/azure-pipelines.yml
@@ -7,9 +7,7 @@ jobs:
     vmImage: 'Ubuntu 16.04'
   container: swift:5.0
   steps:
-    - script: apt install zlib -y
-      displayName: Install dependencies
-    - script: swift test -c release -Xswiftc -enable-testing
+    - script: apt-get -y update && apt-get install -y libz-dev && swift test -c release -Xswiftc -enable-testing
       displayName: Linux Swift 5.0
 
 - job: Linux_Swift_4_2
