Use the "xenial" docker image for the Linux Swift 5.0 Azure job

--- a/.github/azure-pipelines.yml
+++ b/.github/azure-pipelines.yml
@@ -5,9 +5,9 @@ jobs:
 - job: Linux_Swift_5_0
   pool:
     vmImage: 'Ubuntu 16.04'
-  container: swift:5.0
+  container: swift:5.0-xenial
   steps:
-    - script: sudo apt-get -y update && sudo apt-get install -y libz-dev && swift test -c release -Xswiftc -enable-testing
+    - script: swift test -c release -Xswiftc -enable-testing
       displayName: Linux Swift 5.0
 
 - job: Linux_Swift_4_2
