Replace unavailable "iPhone X" simulator with "iPhone 11" on CI

--- a/.github/azure-pipelines.yml
+++ b/.github/azure-pipelines.yml
@@ -76,7 +76,7 @@ jobs:
         sdk: 'iphonesimulator'
         destinationPlatformOption: 'iOS'
         destinationTypeOption: 'simulators'
-        destinationSimulators: 'iPhone X'
+        destinationSimulators: 'iPhone 11'
         useXcpretty: true
         publishJUnitResults: true
     - task: PublishTestResults@2
