enable parallel and randomly ordered testing

--- a/ZIPFoundation.xcodeproj/xcshareddata/xcschemes/ZIPFoundation.xcscheme
+++ b/ZIPFoundation.xcodeproj/xcshareddata/xcschemes/ZIPFoundation.xcscheme
@@ -39,7 +39,9 @@
       </MacroExpansion>
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "ZIPFoundation::ZIPFoundationTests"
