--- a/.github/azure-pipelines.yml
+++ b/.github/azure-pipelines.yml
@@ -1,10 +1,32 @@
 trigger:
   - master
 
+strategy:
+  matrix:
+    Ubuntu 20.04:
+      imageName: ubuntu-20.04
+    Ubuntu 18.04:
+      imageName: ubuntu-18.04
+    Ubuntu 16.04:
+      imageName: ubuntu-16.04
+
+pool:
+  vmImage: $(imageName)
+
 jobs:
+
+- job: Swift_latest
+  pool:
+    vmImage: $(imageName)
+  # We currently can't use the official Swift Docker image, because it no longer comes with with zlib dependency
+  container: norionomura/swift:latest
+  steps:
+    - script: swift test -c release -Xswiftc -enable-testing
+      displayName: Linux Swift latest
+
 - job: Linux_Swift_5_0
   pool:
-    vmImage: 'Ubuntu 16.04'
+    vmImage: $(imageName)
   # We currently can't use the official Swift Docker image, because it no longer comes with with zlib dependency
   container: norionomura/swift:5.0.0
   steps:
@@ -13,7 +35,7 @@ jobs:
 
 - job: Linux_Swift_4_2
   pool:
-    vmImage: 'Ubuntu 16.04'
+    vmImage: $(imageName)
   container: swift:4.2
   steps:
     - script: swift test -c release -Xswiftc -enable-testing
@@ -21,7 +43,7 @@ jobs:
 
 - job: Linux_Swift_4_1
   pool:
-    vmImage: 'Ubuntu 16.04'
+    vmImage: $(imageName)
   container: swift:4.1
   steps:
     - script: swift test -c release -Xswiftc -enable-testing
@@ -29,17 +51,15 @@ jobs:
 
 - job: Linux_Swift_4_0
   pool:
-    vmImage: 'Ubuntu 16.04'
+    vmImage: $(imageName)
   container: swift:4.0
   steps:
     - script: swift test -c release -Xswiftc -enable-testing
       displayName: Linux Swift 4.0
 
-- job: macOS_10_14
+- job: macOS_latest
   pool:
-    vmImage: 'macOS 10.14'
-  variables:
-    DEVELOPER_DIR: /Applications/Xcode_11.2.app
+    vmImage: macOS-latest
   steps:
     - task: Xcode@5
       inputs:
@@ -59,11 +79,33 @@ jobs:
         testResultsFiles: build/reports/**
         failTaskOnFailedTests: true
 
-- job: iOS_12_1
+- job: macOS_10_14
   pool:
-    vmImage: 'macOS 10.14'
-  variables:
-    DEVELOPER_DIR: /Applications/Xcode_11.2.app
+    vmImage: macOS-10.14
+  steps:
+    - task: Xcode@5
+      inputs:
+        actions: 'test'
+        packageApp: false
+        exportMethod: 'development'
+        exportOptionsPlist: ''
+        configuration: 'Release'
+        scheme: 'ZIPFoundation'
+        sdk: 'macosx'
+        destinationPlatformOption: 'macOS'
+        useXcpretty: true
+        publishJUnitResults: true
+    - task: PublishTestResults@2
+      inputs:
+        testRunner: JUnit
+        testResultsFiles: build/reports/**
+        failTaskOnFailedTests: true
+
+
+
+- job: iOS_latest
+  pool:
+    vmImage: macOS-latest
   steps:
     - task: Xcode@5
       inputs:
@@ -87,9 +129,7 @@ jobs:
 
 - job: watchOS_5_1
   pool:
-    vmImage: 'macOS 10.14'
-  variables:
-    DEVELOPER_DIR: /Applications/Xcode_11.2.app
+    vmImage: macOS-latest
   steps:
     # We currently only perform a build-only script for watchOS (xcodebuild test is unable to find the XCTest module)
     - task: Xcode@5
@@ -105,11 +145,9 @@ jobs:
         destinationTypeOption: 'simulators'
         destinationSimulators: 'Apple Watch Series 3 - 38mm'
 
-- job: tvOS_12_1
+- job: tvOS_latest
   pool:
-    vmImage: 'macOS 10.14'
-  variables:
-    DEVELOPER_DIR: /Applications/Xcode_11.2.app
+    vmImage: macOS-latest
   steps:
     - task: Xcode@5
       inputs:
@@ -133,9 +171,7 @@ jobs:
 
 - job: SwiftLint
   pool:
-    vmImage: 'macOS 10.14'
-  variables:
-    DEVELOPER_DIR: /Applications/Xcode_11.2.app
+    vmImage: macOS-latest
   steps:
     - script: xcodebuild -scheme ZIPFoundation clean build-for-testing > xcodebuild.log
       displayName: Generate xcodebuild.log
@@ -156,9 +192,7 @@ jobs:
 
 - job: CodeCoverage
   pool:
-    vmImage: 'macOS 10.14'
-  variables:
-    DEVELOPER_DIR: /Applications/Xcode_11.2.app
+    vmImage: macOS-latest
   steps:
     - script: xcodebuild test -destination 'platform=macOS,arch=x86_64' -scheme "ZIPFoundation" -derivedDataPath Build/ 
       displayName: Generate xccovreport
