--- a/.github/azure-pipelines.yml
+++ b/.github/azure-pipelines.yml
@@ -1,39 +1,10 @@
 trigger:
   - master
 
-pool:
-  vmImage: $(imageName)
-
 jobs:
-
-- job: Linux_Swift_latest
-  strategy:
-    matrix:
-      Ubuntu 20.04:
-        imageName: ubuntu-20.04
-      Ubuntu 18.04:
-        imageName: ubuntu-18.04
-      Ubuntu 16.04:
-        imageName: ubuntu-16.04
-  pool:
-    vmImage: $(imageName)
-  # We currently can't use the official Swift Docker image, because it no longer comes with with zlib dependency
-  container: norionomura/swift:latest
-  steps:
-    - script: swift test -c release -Xswiftc -enable-testing
-      displayName: Linux Swift latest
-
 - job: Linux_Swift_5_0
-  strategy:
-    matrix:
-      Ubuntu 20.04:
-        imageName: ubuntu-20.04
-      Ubuntu 18.04:
-        imageName: ubuntu-18.04
-      Ubuntu 16.04:
-        imageName: ubuntu-16.04
   pool:
-    vmImage: $(imageName)
+    vmImage: 'Ubuntu 16.04'
   # We currently can't use the official Swift Docker image, because it no longer comes with with zlib dependency
   container: norionomura/swift:5.0.0
   steps:
@@ -41,78 +12,34 @@ jobs:
       displayName: Linux Swift 5.0
 
 - job: Linux_Swift_4_2
-  strategy:
-    matrix:
-      Ubuntu 20.04:
-        imageName: ubuntu-20.04
-      Ubuntu 18.04:
-        imageName: ubuntu-18.04
-      Ubuntu 16.04:
-        imageName: ubuntu-16.04
   pool:
-    vmImage: $(imageName)
+    vmImage: 'Ubuntu 16.04'
   container: swift:4.2
   steps:
     - script: swift test -c release -Xswiftc -enable-testing
       displayName: Linux Swift 4.2
 
 - job: Linux_Swift_4_1
-  strategy:
-    matrix:
-      Ubuntu 20.04:
-        imageName: ubuntu-20.04
-      Ubuntu 18.04:
-        imageName: ubuntu-18.04
-      Ubuntu 16.04:
-        imageName: ubuntu-16.04
   pool:
-    vmImage: $(imageName)
+    vmImage: 'Ubuntu 16.04'
   container: swift:4.1
   steps:
     - script: swift test -c release -Xswiftc -enable-testing
       displayName: Linux Swift 4.1
 
 - job: Linux_Swift_4_0
-  strategy:
-    matrix:
-      Ubuntu 20.04:
-        imageName: ubuntu-20.04
-      Ubuntu 18.04:
-        imageName: ubuntu-18.04
-      Ubuntu 16.04:
-        imageName: ubuntu-16.04
   pool:
-    vmImage: $(imageName)
+    vmImage: 'Ubuntu 16.04'
   container: swift:4.0
   steps:
     - script: swift test -c release -Xswiftc -enable-testing
       displayName: Linux Swift 4.0
 
-- job: macOS_latest
-  pool:
-    vmImage: macOS-latest
-  steps:
-    - task: Xcode@5
-      inputs:
-        actions: 'test'
-        packageApp: false
-        exportMethod: 'development'
-        exportOptionsPlist: ''
-        configuration: 'Release'
-        scheme: 'ZIPFoundation'
-        sdk: 'macosx'
-        destinationPlatformOption: 'macOS'
-        useXcpretty: true
-        publishJUnitResults: true
-    - task: PublishTestResults@2
-      inputs:
-        testRunner: JUnit
-        testResultsFiles: build/reports/**
-        failTaskOnFailedTests: true
-
 - job: macOS_10_14
   pool:
-    vmImage: macOS-10.14
+    vmImage: 'macOS 10.14'
+  variables:
+    DEVELOPER_DIR: /Applications/Xcode_11.2.app
   steps:
     - task: Xcode@5
       inputs:
@@ -132,11 +59,11 @@ jobs:
         testResultsFiles: build/reports/**
         failTaskOnFailedTests: true
 
-
-
-- job: iOS_latest
+- job: iOS_12_1
   pool:
-    vmImage: macOS-latest
+    vmImage: 'macOS 10.14'
+  variables:
+    DEVELOPER_DIR: /Applications/Xcode_11.2.app
   steps:
     - task: Xcode@5
       inputs:
@@ -160,7 +87,9 @@ jobs:
 
 - job: watchOS_5_1
   pool:
-    vmImage: macOS-latest
+    vmImage: 'macOS 10.14'
+  variables:
+    DEVELOPER_DIR: /Applications/Xcode_11.2.app
   steps:
     # We currently only perform a build-only script for watchOS (xcodebuild test is unable to find the XCTest module)
     - task: Xcode@5
@@ -176,9 +105,11 @@ jobs:
         destinationTypeOption: 'simulators'
         destinationSimulators: 'Apple Watch Series 3 - 38mm'
 
-- job: tvOS_latest
+- job: tvOS_12_1
   pool:
-    vmImage: macOS-latest
+    vmImage: 'macOS 10.14'
+  variables:
+    DEVELOPER_DIR: /Applications/Xcode_11.2.app
   steps:
     - task: Xcode@5
       inputs:
@@ -202,7 +133,9 @@ jobs:
 
 - job: SwiftLint
   pool:
-    vmImage: macOS-latest
+    vmImage: 'macOS 10.14'
+  variables:
+    DEVELOPER_DIR: /Applications/Xcode_11.2.app
   steps:
     - script: xcodebuild -scheme ZIPFoundation clean build-for-testing > xcodebuild.log
       displayName: Generate xcodebuild.log
@@ -223,7 +156,9 @@ jobs:
 
 - job: CodeCoverage
   pool:
-    vmImage: macOS-latest
+    vmImage: 'macOS 10.14'
+  variables:
+    DEVELOPER_DIR: /Applications/Xcode_11.2.app
   steps:
     - script: xcodebuild test -destination 'platform=macOS,arch=x86_64' -scheme "ZIPFoundation" -derivedDataPath Build/ 
       displayName: Generate xccovreport
