Revert "enable parallel and randomly ordered testing"
This reverts commit 577f785f2fa934f9b12629a49f599568f99df50e.

--- a/ZIPFoundation.xcodeproj/xcshareddata/xcschemes/ZIPFoundation.xcscheme
+++ b/ZIPFoundation.xcodeproj/xcshareddata/xcschemes/ZIPFoundation.xcscheme
@@ -39,9 +39,7 @@
       </MacroExpansion>
       <Testables>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES"
-            testExecutionOrdering = "random">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "ZIPFoundation::ZIPFoundationTests"
