--- a/.github/workflows/xccov.yml
+++ b/.github/workflows/xccov.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: xcodebuild test -destination 'platform=macOS,arch=x86_64' -scheme "ZIPFoundation" -derivedDataPath Build/ 
-      - run: (xcrun xccov view --only-targets --report Build/Logs/Test/*.xcresult | grep -Eq  "ZIPFoundation.*100\.00%") && { exit 0; } || { echo 'Please make sure that the test suite covers all framework code paths.'; exit 1; }
+      - run: (xcrun xccov view --only-targets --report Build/Logs/Test/*.xcresult | grep -Eq  "ZIPFoundation.*100\.00%") && { exit 0; } || { echo '::error Please make sure that the test suite covers all framework code paths.'; exit 1; }
