--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -2,9 +2,9 @@ name: Swift
 
 on:
   push:
-    branches: [development]
+    branches: [development, feature/zip64]
   pull_request:
-    branches: [development]
+    branches: [development, feature/zip64]
 
 jobs:
   Xcode:
