--- a/.github/workflows/llvm-cov.yml
+++ b/.github/workflows/llvm-cov.yml
@@ -2,9 +2,9 @@ name: Coverage
 
 on:
   push:
-    branches: [development, feature/zip64]
+    branches: [development]
   pull_request:
-    branches: [development, feature/zip64]
+    branches: [development]
 
 jobs:
   Coverage:
